erDiagram
    users {
        varchar id PK
        varchar username
        varchar email
        bigint createat
    }

    teams {
        varchar id PK
        varchar name
        varchar displayname
        varchar schemeid FK
        bigint createat
    }

    schemes {
        varchar id PK
        varchar scope
        varchar name
    }

    channels {
        varchar id PK
        varchar name
        varchar displayname
        varchar teamid FK
        varchar creatorid FK
        varchar schemeid FK
        varchar type
        boolean shared
        bigint createat
        bigint deleteat
        bigint lastpostat
    }

    channelmembers {
        varchar channelid PK
        varchar userid PK
        varchar roles
        bigint lastviewedat
        bigint mentioncount
        bigint msgcount
    }

    teammembers {
        varchar teamid PK
        varchar userid PK
        varchar roles
        bigint deleteat
    }

    channelmemberhistory {
        varchar channelid PK
        varchar userid PK
        bigint jointime PK
        bigint leavetime
    }

    publicchannels {
        varchar id PK
        varchar teamid FK
        varchar name
        varchar displayname
        bigint deleteat
    }

    schemes ||--o{ teams : "team scheme"
    schemes ||--o{ channels : "channel scheme"
    users ||--o{ channelmembers : "member of"
    users ||--o{ teammembers : "member of"
    users ||--o{ channelmemberhistory : "in"
    teams ||--o{ channels : "contains"
    teams ||--o{ teammembers : "has"
    teams ||--o{ publicchannels : "has"
    channels ||--o{ channelmembers : "has"
    channels ||--o{ channelmemberhistory : "history"
